--- a/taller2018/composer.json
+++ b/taller2018/composer.json
@@ -10,8 +10,7 @@
         "fideloper/proxy": "^4.0",
         "laravel/framework": "5.7.*",
         "laravel/tinker": "^1.0",
-        "laravelcollective/html": "^5.5",
-        "maddhatter/laravel-fullcalendar": "^1.3"
+        "laravelcollective/html": "^5.7"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
