--- a/taller2018/composer.json
+++ b/taller2018/composer.json
@@ -11,7 +11,8 @@
         "laravel/framework": "5.7.*",
         "laravel/tinker": "^1.0",
         "laravelcollective/html": "^5.7",
-        "maddhatter/laravel-fullcalendar": "^1.3"
+        "maddhatter/laravel-fullcalendar": "^1.3",
+        "arielcr/numero-a-letras": "dev-master"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
