--- a/taller2018/composer.json
+++ b/taller2018/composer.json
@@ -12,7 +12,9 @@
         "laravel/tinker": "^1.0",
         "laravelcollective/html": "^5.7",
         "maddhatter/laravel-fullcalendar": "^1.3",
-        "arielcr/numero-a-letras": "dev-master"
+        "arielcr/numero-a-letras": "dev-master",
+        "barryvdh/laravel-dompdf": "0.6.*",
+        "simplesoftwareio/simple-qrcode": "~1"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
